Profile page fixes, cropper changes, fixed 200 x 200 profile images.

--- a/src/styles/base/_common.scss
+++ b/src/styles/base/_common.scss
@@ -1,6 +1,7 @@
 @import 'variables';
 
 #body {
+  overflow: hidden;
   font-family: 'Roboto Mono', monospace;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
